font size, twitter icon instead of follow and fix for light theme

--- a/public/css/somusic-light.css
+++ b/public/css/somusic-light.css
@@ -32,6 +32,10 @@ spinner {
 }
 
 md-progress-linear .md-container {
+  background-color: #ebebeb;
+}
+
+md-progress-linear .md-container .md-bar {
   background-color: #E77A4D;
 }
 
